Ajuste de layout Experiências

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <p>Focado em sempre me desenvolver na área de técnologia, já com o foco em me tornar programador, tive a oportunidade de trabalhar com diversas técnologias, até o momento atual, sendo elas:</p>
             <ul>
                 <li>Hospedagens;</li>
-                <li>Banco de dados (SQL, MYSQL)</li>
+                <li>SQL</li>
+                <li> MYSQL</li>
                 <li>HTML;</li>
                 <li>CSS;</li>
                 <li>JS;</li>
