--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li>CSS;</li>
                 <li>JS;</li>
                 <li>WORDPRESS;</li>
-                <li>PHP;</li>
+                <li>PHP.</li>
             </ul>   
         </section>
     </main>
